--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: rgb(212, 209, 209);
+    /* background-color: rgb(212, 209, 209); */
 }
 
 .img_style {
     width: 100%;
     border-radius: 10%;
+}
+
+.bg_color {
+    background-color: rgb(176, 176, 176);
 }
