--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,14 @@ body {
     font-size: 15px;
 }
 
+a:link,
 a:hover {
+    color: blue;
+}
+
+a {
     color: black;
+    text-decoration: none;
 }
 
 h1 {
