--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,17 @@ a {
 }
 
 h1 {
-    color: rgb(136, 65, 136)
+    color: rgb(136, 65, 136);
 }
 
 .card {
     background-color: rgb(237, 235, 235);
+    transition: transform 0.3s;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    transform: scale(0.9);
 }
 
 .img_style {
